--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,8 @@
 buildscript {
+    ext.springBootVersion = '1.2.3.RELEASE'
+    ext.springSecurityVersion = '4.0.1.RELEASE'
+    ext.springSecurityOAuthVersion = '2.0.7.RELEASE'
+
     repositories {
         maven { url "http://repo.spring.io/libs-snapshot" }
         mavenLocal()
@@ -32,19 +36,24 @@ repositories {
 
 dependencies {
 
+    // Front End
+    compile 'org.webjars:bootstrap:3.3.4'
+    compile 'org.webjars:jquery:2.1.4'
+
+
     // DB
     compile 'mysql:mysql-connector-java:5.1.34'
-    //compile 'com.h2database:h2'
 
     // Spring Boot
-    compile 'org.springframework.boot:spring-boot-starter-web:1.2.3.RELEASE'
+    compile "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'org.springframework.boot:spring-boot-starter-test'
     compile 'org.springframework.boot:spring-boot-starter-freemarker'
 
-    //Required dependency for JSP
-    //providedRuntime 'org.apache.tomcat.embed:tomcat-embed-jasper'
-    //compile 'javax.servlet:jstl'
+    compile "org.springframework.security:spring-security-core:${springSecurityVersion}"
+    compile "org.springframework.security:spring-security-web:${springSecurityVersion}"
+    compile "org.springframework.security:spring-security-config:${springSecurityVersion}"
+    compile "org.springframework.security.oauth:spring-security-oauth2:${springSecurityOAuthVersion}"
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
