--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,5 @@
-# spring view resolver
-#spring.view.prefix: /WEB-INF/templates/
-#spring.view.suffix: .ftl
-
-# mysql
+# DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+# MySQL
 spring.datasource.url=jdbc:mysql://127.0.0.1/study?autoReconnect=true&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=root
@@ -10,7 +7,7 @@ spring.jpa.database=mysql
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-# h2
+# H2
 #spring.datasource.url=jdbc:h2:tcp://localhost/mem:db1
 ##spring.datasource.url=jdbc:h2:tcp://localhost/~/learnspringdatajpa;DB_CLOSE_ON_EXIT=FALSE
 #spring.datasource.driverClassName=org.h2.Driver
@@ -18,23 +15,30 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 #spring.datasource.password=
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# jpa
+# JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
 
 # FREEMARKER (FreeMarkerAutoConfiguration)
 #spring.freemarker.allowRequestOverride=false
-#spring.freemarker.cache=true
+spring.freemarker.cache=false
 #spring.freemarker.checkTemplateLocation=false
-#spring.freemarker.charSet=UTF-8
-#spring.freemarker.contentType=text/html
+spring.freemarker.charSet=UTF-8
+spring.freemarker.contentType=text/html
 #spring.freemarker.exposeRequestAttributes=false
 #spring.freemarker.exposeSessionAttributes=false
-#spring.freemarker.exposeSpringMacroHelpers=false
-#spring.freemarker.prefix=/WEB-INF/templates/
-#spring.freemarker.requestContextAttribute=
+spring.freemarker.exposeSpringMacroHelpers=true
+spring.freemarker.prefix=
+spring.freemarker.requestContextAttribute=rc
 #spring.freemarker.settings.*=
-#spring.freemarker.suffix=.ftl
+spring.freemarker.suffix=.ftl
 #spring.freemarker.templateLoaderPath=classpath:/templates/
 #spring.freemarker.viewNames= # whitelist of view names that can be resolved
+
+# SECURITY (SecurityProperties)
+security.basic.enabled=false
+security.user.name=login
+security.user.password=password
+security.user.role=USER
+security.basic.path=/**
