--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.generate-ddl=true
 
 # FREEMARKER (FreeMarkerAutoConfiguration)
@@ -26,19 +26,28 @@ spring.freemarker.cache=false
 #spring.freemarker.checkTemplateLocation=false
 spring.freemarker.charSet=UTF-8
 spring.freemarker.contentType=text/html
-#spring.freemarker.exposeRequestAttributes=false
+spring.freemarker.exposeRequestAttributes=true
 #spring.freemarker.exposeSessionAttributes=false
 spring.freemarker.exposeSpringMacroHelpers=true
-spring.freemarker.prefix=
+#spring.freemarker.prefix=
 spring.freemarker.requestContextAttribute=rc
 #spring.freemarker.settings.*=
 spring.freemarker.suffix=.ftl
-#spring.freemarker.templateLoaderPath=classpath:/templates/
+spring.freemarker.templateLoaderPath=/WEB-INF/templates
 #spring.freemarker.viewNames= # whitelist of view names that can be resolved
 
 # SECURITY (SecurityProperties)
-security.basic.enabled=false
-security.user.name=login
-security.user.password=password
-security.user.role=USER
-security.basic.path=/**
+#security.basic.enabled=false
+#security.user.name=login
+#security.user.password=password
+#security.user.role=USER
+#security.basic.path=/**
+
+# LOGGING
+#logging.path=/var/logs
+#logging.file=myapp.log
+#logging.config= # location of config file (default classpath:logback.xml for logback)
+#logging.level.*= # levels for loggers, e.g. "logging.level.org.springframework=DEBUG" (TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF)
+logging.level.org.springframework=WARN
+logging.level.org.hibernate=WARN
+logging.level.net.study=DEBUG
