--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.generate-ddl=true
 
 # FREEMARKER (FreeMarkerAutoConfiguration)
@@ -33,7 +33,7 @@ spring.freemarker.exposeSpringMacroHelpers=true
 spring.freemarker.requestContextAttribute=rc
 #spring.freemarker.settings.*=
 spring.freemarker.suffix=.ftl
-spring.freemarker.templateLoaderPath=/WEB-INF/templates
+#spring.freemarker.templateLoaderPath=/WEB-INF/templates
 #spring.freemarker.viewNames= # whitelist of view names that can be resolved
 
 # SECURITY (SecurityProperties)
