--- a/build.gradle
+++ b/build.gradle
@@ -49,24 +49,31 @@ dependencies {
     // Spring
     compile "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-    compile 'org.springframework.boot:spring-boot-starter-test'
     compile 'org.springframework.boot:spring-boot-starter-freemarker'
+    compile 'org.springframework.boot:spring-boot-starter-velocity'
+    compile 'org.springframework:spring-context-support'
 
     compile "org.springframework.security:spring-security-core:${springSecurityVersion}"
     compile "org.springframework.security:spring-security-web:${springSecurityVersion}"
     compile "org.springframework.security:spring-security-config:${springSecurityVersion}"
     compile "org.springframework.security.oauth:spring-security-oauth2:${springSecurityOAuthVersion}"
 
-    //query DSL
+    // query DSL
     compile "com.mysema.querydsl:querydsl-apt:3.6.0"
     compile "com.mysema.querydsl:querydsl-core:3.6.0"
     compile "com.mysema.querydsl:querydsl-jpa:3.6.0"
-    providedCompile "com.mysema.querydsl:querydsl-apt:3.6.0"
+    //providedCompile "com.mysema.querydsl:querydsl-apt:3.6.0"
 
-    //Freemarker Template Inheritance
+    // Freemarker Template Inheritance
     compile 'kr.pe.kwonnam.freemarker:freemarker-template-inheritance:0.4.RELEASE'
 
+    // Mail
+    compile 'javax.mail:mail:1.4.1'
+    compile 'org.subethamail:subethasmtp-wiser:1.2'
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
+    testCompile 'org.subethamail:subethasmtp:3.1.7'
 }
 
 task wrapper(type: Wrapper) {
