--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+# Server
+spring.application.name=study
+spring.application.address=http://localhost:8080
+#server.contextPath=
+#server.port=
+
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 # MySQL
 spring.datasource.url=jdbc:mysql://127.0.0.1/study?autoReconnect=true&useUnicode=true&characterEncoding=utf8
