File is altered Asset & Add file upload and user avatar(but, I didn't add download)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Server
-spring.application.name=study
+spring.application.name=EFEM
 spring.application.address=http://localhost:8080
 #server.contextPath=
 #server.port=
@@ -34,3 +34,11 @@ spring.jpa.generate-ddl=true
 logging.level.org.springframework=WARN
 logging.level.org.hibernate=WARN
 logging.level.net.study=DEBUG
+
+# File
+
+multipart.max-file-size=4MB
+multipart.max-request-size=4MB
+
+# Error Page
+error.whitelabel.enabled=false
